k8s/headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: custom-app-stateful
  namespace: logging-system
spec:
  clusterIP: None
  selector:
    app: custom-app
  ports:
    - name: http
      port: 8080
      targetPort: http
