k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: custom-app-service
  namespace: logging-system
spec:
  type: ClusterIP
  selector:
    app: custom-app
  ports:
    - name: http
      port: 80
      targetPort: http
